--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "videobroadcast",
   "version": "1.0.0",
-  "description": "huhuhuhuhu",
+  "description": "yeah",
   "main": "broadcast.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
